--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/src/assets/titleLogo.png" />
     <link href="https://fonts.cdnfonts.com/css/manrope-3" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hush</title>
   </head>
